added more user options for admin
